; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_tbl_term.c_term_tbl_sulen.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_tbl_term.c_term_tbl_sulen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.roffsu = type { i32 }
%struct.termp = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.roffsu*, i8*)* @term_tbl_sulen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @term_tbl_sulen(%struct.roffsu* %0, i8* %1) #0 {
  %3 = alloca %struct.roffsu*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.roffsu* %0, %struct.roffsu** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.termp*
  %8 = load %struct.roffsu*, %struct.roffsu** %3, align 8
  %9 = call i32 @term_hen(%struct.termp* %7, %struct.roffsu* %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp sgt i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* %5, align 4
  br label %15

14:                                               ; preds = %2
  br label %15

15:                                               ; preds = %14, %12
  %16 = phi i32 [ %13, %12 ], [ 0, %14 ]
  %17 = sext i32 %16 to i64
  ret i64 %17
}

declare dso_local i32 @term_hen(%struct.termp*, %struct.roffsu*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
